[package]
name = "leisql"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { version = "0.32.0", features = ["visitor"] }
enum-as-inner = "0.5.1"
lazy_static = "1.4.0"
pgwire = "0.11.1"
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.67"
futures = "0.3.27"
log = "0.4.17"

[dev-dependencies]
sqllogictest = "0.13.0"
